objects/vlocity_ins_fsc__InsurancePolicyPaymentScheduleEntry__c.object
<CustomObject>
    <description>Represents the scheduled payments including the premiums, taxes, and fees for a policy record across the term of the policy. Master-detail child object of an Insurance Policy.</description>
    <fields>
        <fullName>vlocity_ins_fsc__FeeAmount__c</fullName>
        <description>Respresents the calculated fee amount due for the payment period.</description>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsPolicyTransactionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance policy transaction associated with the payment schedule entry.</description>
        <label>Insurance Policy Transaction</label>
        <referenceTo>InsurancePolicyTransaction</referenceTo>
        <relationshipLabel>Insurance Policy Payment Schedule</relationshipLabel>
        <relationshipName>InsPolicyPaymentScheduleTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyId__c</fullName>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipName>InsurancePolicyPaymentSchedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__InsurancePolicyTransactionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Please use InsPolicyTransactionId__c.</description>
        <label>Insurance Policy Transaction Id</label>
        <referenceTo>vlocity_ins_fsc__InsurancePolicyTransaction__c</referenceTo>
        <relationshipLabel>Insurance Policy Payment Schedule</relationshipLabel>
        <relationshipName>InsurancePolicyPaymentSchedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__PremiumAmount__c</fullName>
        <description>Represents the calculated premium amount due for the payment period.</description>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__ScheduleDate__c</fullName>
        <label>Schedule Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TaxAmount__c</fullName>
        <description>Respresents the calculated tax amount due for the payment period.</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins_fsc__TotalAmount__c</fullName>
        <description>Represents the sum of PremiumAmount__c, TaxAmount__c, and FeeAmount__c.</description>
        <formula>vlocity_ins_fsc__PremiumAmount__c + vlocity_ins_fsc__TaxAmount__c + vlocity_ins_fsc__FeeAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Insurance Policy Payment Schedule Entry</label>
    <nameField>
        <label>Entry Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Policy Payment Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>